add padcast for chapter 5 to 10

--- a/第5章_权利法案.md
+++ b/第5章_权利法案.md
@@ -5,6 +5,15 @@ title: 第5章：权利法案 - 老百姓终于有了说话的权利！议会如
 
 # 第5章：权利法案 - 老百姓终于有了说话的权利！议会如何用法律制服了"神仙国王"？
 
+## 收听本章播客
+
+<audio controls style="width: 100%; max-width: 600px; margin: 20px 0;">
+  <source src="{{ '/podcast/第5章_权利法案.mp3' | relative_url }}" type="audio/mpeg">
+  您的浏览器不支持音频播放，请<a href="{{ '/podcast/第5章_权利法案.mp3' | relative_url }}">下载音频文件</a>。
+</audio>
+
+---
+
 ## 开头故事：1685年，一个国王的"神仙梦"如何引发革命
 
 1685年，伦敦威斯敏斯特教堂。
