--- a/第6章_拿破仑法典.md
+++ b/第6章_拿破仑法典.md
@@ -5,6 +5,15 @@ title: 第6章：拿破仑法典 - 小个子用一部法典征服了欧洲，比
 
 # 第6章：拿破仑法典 - 小个子用一部法典征服了欧洲，比百万大军还厉害！
 
+## 收听本章播客
+
+<audio controls style="width: 100%; max-width: 600px; margin: 20px 0;">
+  <source src="{{ '/podcast/第6章_拿破仑法典.mp3' | relative_url }}" type="audio/mpeg">
+  您的浏览器不支持音频播放，请<a href="{{ '/podcast/第6章_拿破仑法典.mp3' | relative_url }}">下载音频文件</a>。
+</audio>
+
+---
+
 ## 开头故事：将军变身法学家
 
 1800年冬，巴黎郊外的一座别墅里，油灯昏暗。
