--- a/第8章_斯科特案.md
+++ b/第8章_斯科特案.md
@@ -5,6 +5,15 @@ title: 第8章：斯科特案 - 引发内战的法律判决！一个黑奴的自
 
 # 第8章：斯科特案 - 引发内战的法律判决！一个黑奴的自由诉讼如何撕裂了美国？
 
+## 收听本章播客
+
+<audio controls style="width: 100%; max-width: 600px; margin: 20px 0;">
+  <source src="{{ '/podcast/第8章_斯科特案.mp3' | relative_url }}" type="audio/mpeg">
+  您的浏览器不支持音频播放，请<a href="{{ '/podcast/第8章_斯科特案.mp3' | relative_url }}">下载音频文件</a>。
+</audio>
+
+---
+
 ## 你敢相信吗？一个黑奴的官司差点毁掉了整个美国！
 
 想象一下：如果你是一个黑奴，生活在19世纪的美国。你的主人带着你从南方蓄奴州搬到了北方自由州，在那里你生活了好几年。按照当地法律，你应该是自由人了！
