--- a/第9章_米兰达警告.md
+++ b/第9章_米兰达警告.md
@@ -5,6 +5,15 @@ title: 第9章：米兰达警告 - 你有权保持沉默！警察逮捕你时为
 
 # 第9章：米兰达警告 - 你有权保持沉默！警察逮捕你时为什么要说这句话？
 
+## 收听本章播客
+
+<audio controls style="width: 100%; max-width: 600px; margin: 20px 0;">
+  <source src="{{ '/podcast/第9章_米兰达警告.mp3' | relative_url }}" type="audio/mpeg">
+  您的浏览器不支持音频播放，请<a href="{{ '/podcast/第9章_米兰达警告.mp3' | relative_url }}">下载音频文件</a>。
+</audio>
+
+---
+
 ## 开头故事：一句话如何改变世界？
 
 想象一下：你正在看电视里的警匪片，警察抓住罪犯时总会说那几句套话："你有权保持沉默，你所说的一切都可能成为对你不利的证据..."
